finish 'like post'

--- a/client/src/components/MyPosts/Post/Post.module.css
+++ b/client/src/components/MyPosts/Post/Post.module.css
@@ -12,3 +12,11 @@
     height: 80px;
     border-radius: 40px;
   }
+
+  .isLiked {
+    color: red;
+  }
+
+  .isNotLiked {
+    color: black;
+  }
