--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -1,16 +1,26 @@
 .header {
-    grid-area: h;
-    background-color: aqua;
-  }
-  
-  .header img {
-    width: 20px;
-  }
+  grid-area: h;
+  background-color: aqua;
+}
 
-  .loginBlock {
-    float: right;
-  }
+.header img {
+  width: 20px;
+}
 
-  .loginBlock a {
-    color: white;
-  }
+.loginBlock {
+  float: right;
+}
+
+.loginBlock a {
+  color: white;
+}
+
+.notification a {
+  color: black;
+}
+
+.notification {
+  float: left;
+  margin-right: 40px;
+  margin-top: 10px;
+}
