--- a/client/src/components/Dialogs/DialogsHeader/DialogsNewButton/DialogsNewButton.scss
+++ b/client/src/components/Dialogs/DialogsHeader/DialogsNewButton/DialogsNewButton.scss
@@ -1,4 +1,5 @@
 .dialog-new-button {
+  margin-left: 3px;
   color: white;
   font-size: 35px;
   text-decoration: none;
@@ -10,7 +11,7 @@
   text-align: center;
   border-radius: 40px;
   &:hover {
-    background-color: white;
+    background-color:white;
     color: gray;
     transition: 300ms;
   }
