--- a/client/src/components/Dialogs/Messages/MessageList/MessageList.scss
+++ b/client/src/components/Dialogs/Messages/MessageList/MessageList.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   max-height: 110px;
+  min-height: 50px;
   overflow-y: auto;
   &::-webkit-scrollbar {
     width: 10px;
