1.load friends and user info in dialogs (api) 2.add friend to chat feature 3.updated styles 4.added new chat form filter

--- a/client/src/components/Dialogs/NewChatForm/MembersList/MembersList.scss
+++ b/client/src/components/Dialogs/NewChatForm/MembersList/MembersList.scss
@@ -21,6 +21,7 @@
 .member-item {
   border: 1px solid gray;
   margin: 3px;
+  padding: 8px;
   background-color: rgba(211, 211, 211, 0.7);
   cursor: pointer;
   position: relative;
@@ -31,6 +32,7 @@
 
 .member-name {
   font-size: 20px;
+  margin-bottom: 3px;
   color: white;
 }
 
