--- a/client/src/components/Dialogs/Messages/MessagesHeader/MessagesInfoModal/MessagesInfoModal.scss
+++ b/client/src/components/Dialogs/Messages/MessagesHeader/MessagesInfoModal/MessagesInfoModal.scss
@@ -47,8 +47,11 @@
 }
 
 .chat-modal-member {
-  margin: 3px 0;
+  display: flex;
+  align-items: center;
+  margin: 5px 0;
   &.member-add {
+    font-size: 18px;
     margin-bottom: 5px; 
     display: flex;
     align-items: center;
@@ -57,6 +60,20 @@
       background-color: $modal-add-memb-hover;
     }
   }
+}
+
+.chat-modal-member-delete {
+  cursor: pointer;
+  font-size: 21px;
+  margin-left: 5px;
+  margin-right: 4px;
+  &:hover {
+    color: rgb(161, 6, 6);
+  }
+}
+
+.chat-modal-member-name {
+  font-size: 20px;
 }
 
 .modal-member-add-icon {
