--- a/client/src/components/Dialogs/NewChatForm/MembersList/MembersList.scss
+++ b/client/src/components/Dialogs/NewChatForm/MembersList/MembersList.scss
@@ -1,23 +1,3 @@
-.members-list {
-  display: flex;
-  flex-direction: column;
-  max-height: 180px;
-  overflow-y: auto;
-  &::-webkit-scrollbar {
-    width: 10px;
-  }  
-  &::-webkit-scrollbar-track {
-    background: inherit;
-  }   
-  &::-webkit-scrollbar-thumb {
-    background: #2578f5; 
-    border-radius: 8px;
-  }  
-  &::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-  }
-}
-
 .member-item {
   border: 1px solid gray;
   margin: 3px;
@@ -65,6 +45,7 @@
     display: inline-block;
     width: 1em;
     height: 1em;
+    font-family: initial;
     padding-left: 0.2em;
     padding-bottom: 0.3em;
     margin-right: 0.2em;
