--- a/client/src/styles/general.scss
+++ b/client/src/styles/general.scss
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Cairo&family=Nanum+Gothic:wght@700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: content-box;
+}
+
+body {
+  font-family: 'Cairo', sans-serif;
 }
 
 button {
