--- a/client/src/components/MyPosts/MyPosts.scss
+++ b/client/src/components/MyPosts/MyPosts.scss
@@ -1,7 +1,15 @@
-.postsBlock {
+.posts {
   padding: 10px;
 }
 
-.posts {
+.add-new-post {
+  word-wrap: pre-line;
+}
+
+.posts-title {
+  margin-bottom: 8px;
+}
+
+.posts-container {
   margin-top: 10px;
 }
