--- a/client/src/components/Dialogs/DialogList/DialogItem/DialogItem.scss
+++ b/client/src/components/Dialogs/DialogList/DialogItem/DialogItem.scss
@@ -27,10 +27,10 @@
 
 .dialog-owner {
   position: absolute;
-  color: #2e2c2c;
+  color: #2e022e;
   font-size: 16px;
   top: 3px;
-  right: 3px;
+  right: 5px;
   &.owner-me {
     text-decoration: underline;
     font-size: 15px;
