--- a/client/src/components/Dialogs/DialogsHeader/DialogsSearch/DialogsSearch.scss
+++ b/client/src/components/Dialogs/DialogsHeader/DialogsSearch/DialogsSearch.scss
@@ -1,6 +1,9 @@
 .dialog-search-field {
-  height: 34px;
-  padding: 3px 5px;
-  outline: none;
-  width: 100%;
+  padding: 3px 7px;
+  background-color: #fff;
+  border-radius: 2px;
+}
+
+.dialog-search-icon {
+  cursor: pointer;
 }
