--- a/client/src/components/Dialogs/Messages/MessagesHeader/MessagesHeader.scss
+++ b/client/src/components/Dialogs/Messages/MessagesHeader/MessagesHeader.scss
@@ -8,11 +8,16 @@
   height: 80px;
 }
 
-.message-search-input {
-  width: 900px;
+.message-search {
+  width: 100%;
   margin: 0 20px;
+}
+
+.message-search-input {
+  width: 100%;
   height: 20px;
   padding: 5px;
+  outline-color: #b518ca;
 }
 
 .header-chat-info {
