--- a/client/src/components/Dialogs/NewChatForm/SearchNewChatMembers/SearchNewChatMembers.scss
+++ b/client/src/components/Dialogs/NewChatForm/SearchNewChatMembers/SearchNewChatMembers.scss
@@ -3,10 +3,9 @@
 }
 
 .search-field {
-  width: calc(100% - 16px);
-  height: 30px;
-  padding: 5px 8px;
-  border-radius: 3px;
-  border: 1px solid #eee;
-  outline: none;
+  width: 100%;
+}
+
+.new-chat-search-icon {
+  color:#29033f;
 }
