--- a/client/src/components/Login/SignIn/SignIn.scss
+++ b/client/src/components/Login/SignIn/SignIn.scss
@@ -1,16 +1,17 @@
 .form-sign-in-header {
   text-align: center;
+  font-size: 24px;
 }
 
-.form-sign-in {
-  margin: 40px 20%;
+.sign-in-form {
+  margin: 35px 7%;
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
 
-.MuiButton-contained {
-  &.form-sign-in-submit {
+.form-sign-in-submit {
+  &.MuiButton-contained {
     margin-top: 15px;
   }
 }
