--- a/client/src/components/Login/SignUp/SignUp.scss
+++ b/client/src/components/Login/SignUp/SignUp.scss
@@ -1,17 +1,18 @@
 .sign-up {
   &.go-back {
     position: relative;
-    top: 70px;
-    left: 14.5%;
+    top: 30px;
+    left: 9%;
   }
 }
 
 .form-sign-up-header {
   text-align: center;
+  font-size: 24px;
 }
 
 .form-sign-up {
-  margin: 40px 15%;
+  margin: 20px 10%;
   display: flex;
   justify-content: center;
   flex-direction: column;
