--- a/client/src/components/Profile/ProfileInfo/ProfileInfo.scss
+++ b/client/src/components/Profile/ProfileInfo/ProfileInfo.scss
@@ -8,6 +8,7 @@
   padding-bottom: 100%;
   position: relative;
 }
+
 .profile-info-media-photo {
   position: absolute;
   top: 0;
@@ -20,18 +21,22 @@
 }
 
 .profile-info-media-icon {
-  position: absolute;
-  font-size: 0;
-  bottom: 5px;
-  right: 5px;
   background-color: #eee;
   border-radius: 50%;
   padding: 5px;
+  margin: 3px;
   .media-icon-img {
     &:hover {
       cursor: pointer;
     }
   }
+}
+
+.profile-info-media-icons {
+  position: absolute;
+  font-size: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .profile-info-content {
