1.removed notifications 2.added smart routes 3.delete message feature 4.fixed users and friends filters 5.fixed console errors and warn(without hooks)

--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -11,6 +11,13 @@
   color: $nav-link-color;
   text-decoration: none;
   font-size: $nav-link-size;
+
+  &.logout {
+    &:hover {
+      color: $nav-link-hover-color;
+    }
+  }
+
   a {
     &.active {
       color: $nav-link-active-color;
